add get gt api
